fixed header menu vertical alignment

--- a/scss/style.css
+++ b/scss/style.css
@@ -341,6 +341,9 @@ header nav .header-logo img {
 
 header nav .header-menu {
   height: inherit;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 header nav .header-menu img {
